2006-07-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailFilterPanel.m ([UIxMailFilterPanel -setSearchCriteria:]) 
	([UIxMailFilterPanel -searchCriteria]): new methods, similar to
	s/Criteria/Text/ to handle the "criteria" form parameter.

2006-07-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/uix.css: enhanced the toolbar appearance
	to integrate better with the firefox look&feel. Added entries for
	the new "menu" DIV class (popup menus).

	* UI/WebServerResources/generic.js: added "sanitizeMailTo" which
	takes any chunk of text as param, detects the user email and the
	optional first and last names and return them in a well-formatted
	way. Renamed "getSelection" to "getSelectedNodes" to avoid a
	namespace conflict. Added "onMenuClick(node, event, menuId)" to
	handle popup menus through "onclick" element attributes (node =
	this, event = event and menuId = name of the menu DIV id to
	popup).

	* UI/Contacts/UIxContactEditorBase.m ([UIxContactEditorBase
	-snapshot]): add an entry for "email" into the snapshot
	dictionary if a "contactEmail" URL parameter was detected and if
	the entry for "email" is empty.

	* UI/Contacts/Toolbars/SOGoContactFolder.toolbar: the "new card"
	button now invokes the newContact() js function in ContactsUI.js
	instead of opening "new" directly. newContact() pops up a window
	stripped from its navigation bar.

	* UI/Contacts/ContactsUI.js: new module specific to the ContactsUI
	bundle (AddressBook).

	* UI/Templates/MailerUI/UIxMailView.wox: added a div of class
	"menu" and id "addressMenu" have the header email addresses
	display it with the new menu code in generic.js.

	* UI/Templates/MailerUI/UIxMailPanelFrame.wox: same as below +
	replaced the body tables with a div of class "pageContent"
	(standardization across the page templates).

	* UI/Templates/MailerUI/UIxMailMainFrame.wox: include
	productJavaScriptURL and pageJavaScriptURL (conditionnally) since